ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration2/input.ts.stderr
error: Unexpected token `)`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterDeclaration2/input.ts:7:29
  |
7 | a0([1, "string", [["world"]]);      // Error
  |                             ^

